<resources>
    <string name="app_name">Portfolio</string>
    <string name="app_title">My Protofolio Apps</string>
    <string name="action_settings">Settings</string>
    <string name="btn_spotify">SPOTIFY STREAMER</string>
    <string name="btn_scores_app">SCORES APP</string>
    <string name="btn_library_app">LIBRARY APP</string>
    <string name="btn_build_it_bigger">BUILD IT BIGGER</string>
    <string name="btn_bacon_reader">BACON READER</string>
    <string name="btn_capstone">CAPSTONE: MY OWN APP</string>
    <string name="toast_spotify">This button will launch my SPOTIFY STREAMER app</string>
    <string name="toast_scores_app">This button will launch my SCORES app</string>
    <string name="toast_library_app">This button will launch my LIBRARY app</string>
    <string name="toast_build_it_bigger">This button will launch my BUILD IT BIGGER app</string>
    <string name="toast_bacon_reader">This button will launch my BACON READER app</string>
    <string name="toast_capstone">This button will launch my Own CAPSTONE app</string>
</resources>